# doc_insight_v2

./: .gitignore  README.md  sdkconfig  sdkconfig.old
components/tfmicro/: CMakeLists.txt
main/: CMakeLists.txt  main_functions.cc  main_functions.h  model_settings.h
main/esp/: app_camera_esp.h  image_provider.cc
main/person_model_grayscale/: person_detect_model_data.cc
train/: capture_imgs.py  class_labels.txt  doc_insight.lite.quant.pb  doc_insight.micro.quant.pb  gen_micro_model.py  quantize.py  train.py  train.sh
train/data/: labels.txt
train/esp-eye_http_cam/: esp-eye_http_cam.ino  secret.h
train/models/: model.cc  model.tflite  model_no_quant.tflite
train/models/model/: keras_metadata.pb  saved_model.pb
train/models/model/variables/: variables.index
train/tf_logs/train/: events.out.tfevents.1627841188.wookiee.9803.5313.v2  events.out.tfevents.1627841190.wookiee.profile-empty
train/tf_logs/validation/: events.out.tfevents.1627841191.wookiee.9803.9624.v2
train/trained_model/: saved_model.pb
train/trained_model/variables/: variables.data-00000-of-00001  variables.index
train/training_output/: events.out.tfevents.1627761261.wookiee  events.out.tfevents.1627761339.wookiee  events.out.tfevents.1627761407.wookiee  events.out.tfevents.1627761990.wookiee  events.out.tfevents.1627762077.wookiee  events.out.tfevents.1627762132.wookiee  events.out.tfevents.1627762162.wookiee  events.out.tfevents.1627762287.wookiee  events.out.tfevents.1627762380.wookiee  events.out.tfevents.1627763702.wookiee  events.out.tfevents.1627764442.b56ada47b6fb
(+4 files in other folders)
